--- a/.classpath
+++ b/.classpath
@@ -24,8 +24,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="readfile"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -36,9 +38,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/jquery-3.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/junit-4.13.2 (1).jar"/>
 	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/cucumber-core-7.11.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/cucumber-java-7.11.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/selenium-server-4.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/apache-log4j-2.0-bin/log4j-api-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/apache-log4j-2.0-bin/log4j-core-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/welcome/Downloads/junit-4.13.2 (1).jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
